# portfolio-stress-test

./: .gitignore  Dockerfile  LICENSE  README.md  data_fields.json  requirements-docker.txt  requirements-linux.txt  requirements.txt  setup.cfg  setup.py
Input_Parameters_and_Data_Guide/: data_fields.json  external_data_requirements.json  stress_parameters.json
docs/: Crypto Risk Scenario Mechanics.docx
docs/Input_Parameters_and_Data_Guide/: stress_parameters.json
examples/: deribit_option_data_real_time.csv  vol_models.ipynb
examples/crypto/: crypto_stress_test.ipynb  crypto_stress_test_demo.ipynb  deribit.py  example_crypto.py  positions.json  positions.xlsx  pricing_alignment.ipynb  temp.csv  temp2.csv  vega_delta_align.csv  vol_surface.ipynb
examples/data/: fx.json  positions.json
examples/equity/: equity.py
portrisk/: __init__.py  black_scholes.py  clients.py  crypto.py  equity.py  liquidity_risk.py  utils.py
portrisk/clients/: __init__.py  clients.py
portrisk/core/: __init__.py  black_scholes.py  crypto.py  equity.py  fx.py  option.py  spot_vol_stress.py  stress_test.py  utils.py  vol_surface_shocks.py  vol_surface_stress.py
portstress/: crypto.py  fx.py
portstress/clients/: clients.py  deribit.py
portstress/core/: __init__.py  black_scholes.py  pnl_attribution.py  spot_vol_stress.py  vol_surface_stress.py
qrisklab/: __init__.py  crypto.py  equity.py  utils.py
qrisklab/clients/: __init__.py  bloomberg.py  deribit.py
qrisklab/core/: __init__.py  black_scholes.py  (+3 more)
requirements/: dev.in  docker.in  requirements.in
tests/: test_top.py
(+19 files in other folders)
