[metadata]
name = portrisk
version = 3.2.4
description = A python-based automatic tress testing tool to evaluate the portfolio risk under various scenarios.
author = Bilal
url = https://github.com/BilalBAI/portfolio-stress-test
author_email = bilal.yue.bai@gmail.com

[options]
python_requires = >=3.7
install_requires =
    pandas
    pytest-cov
    numpy
    scipy
    sqlalchemy
    blpapi
    blp

[flake8]
max-line-length = 120
ignore = E124,E722,W503,W504

[yapf]
based_on_style = google
spaces_before_comment = 3
dedent_closing_brackets = true
column_limit = 120
split_complex_comprehension = true

[pep8]
max-line-length = 120
ignore = E402,W504,W503,E265,E124

[testenv]
commands = {posargs:pytest}
deps = .[test]

[tool:pytest]
markers = wip

[pylint]
enable = W0614
disable=F0401,W0141,W0611,W0110,W0703,W0142,too-many-instance-attributes,too-many-arguments,too-many-locals,no-else-return,no-member,too-few-public-methods,len-as-condition,missing-docstring,bad-continuation,useless-super-delegation,unused-variable,try-except-raise
variable-rgx=[a-z_][a-z0-9_]{0,30}$
argument-rgx=[a-z_][a-z0-9_]{0,30}$
function-rgx=[a-z_][a-z0-9_]{0,100}$
method-rgx=[a-z_][a-z0-9_]{0,30}$
attr-rgx=[a-z_][a-z0-9_]{0,30}$

[TYPECHECK]
ignored-modules = numpy,pyodbc

